--- a/scss/pt.scss
+++ b/scss/pt.scss
@@ -33,11 +33,6 @@ sub, sup {
   display: none;
 }
 
-/* Invisibly fills space */
-.invisible {
-  visibility: hidden;
-}
-
 .center {
     text-align: center;
 }
